--- a/index.html
+++ b/index.html
@@ -3,27 +3,83 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Airplane Sizing</title>
+<title>Airplane Sizing Project</title>
 <style>
   body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
     margin: 0;
     padding: 0;
-    background-color: #3498db;
-    font-family: Arial, sans-serif;
-    color: white;
+  }
+  header {
+    background-image: url('plane-background.jpg'); /* Replace with your image URL */
+    background-size: cover;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
   }
   .container {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
+  }
+  .disclaimer {
+    background-color: #ddd;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 20px;
+  }
+  footer {
+    background-color: #666;
+    color: #fff;
     text-align: center;
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
+  nav {
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: sticky;
+    top: 0;
+  }
+  nav a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
   }
 </style>
 </head>
 <body>
+  <header>
+    <h1>Airplane Sizing Project</h1>
+    <p>Author: Adrian Sonnemann</p>
+  </header>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+  </nav>
   <div class="container">
-    <h1>Airplane Sizing</h1>
-    <p>Welcome to my Airplane Sizing webpage. The aim of this platform is to help myself, but maybe also some other inthusiasts, to determine the appropriate size and dimensions for various types of airplanes.</p>
+    <h2>Disclaimer</h2>
+    <div class="disclaimer">
+      <p>Please be aware that the contents of this project are not meant to be authoritative or reliable sources of information. The information provided here may be inaccurate, outdated, or incomplete. Always consult professional resources and experts when dealing with real-world aircraft design and sizing.</p>
+    </div>
+    <h2>Introduction</h2>
+    <p>Welcome to my Airplane Sizing Project! This is a personal project aimed at assisting someone in determining suitable dimensions for various types of airplanes. The project provides resources and tools to help make informed decisions about airplane sizing, but please note that the information here may not be accurate or current.
+	<h2>Purpose</h2>
+	<p>The primary purpose of this project is to provide myself with a platform to explore and understand the concepts of airplane sizing. It's a playground for experimenting with different formulas, calculations, and design considerations related to aircraft dimensions. While the project is designed for personal use, enthusiasts and curious minds are welcome to take a quick look and may share feedback.</p>
+    <h2>Content Goes Here</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam bibendum, arcu eu fringilla dapibus.</p>
+    <h2>Contact</h2>
+    <p>If you have any questions, comments, or suggestions about this project, feel free to <a href="mailto:sonnemann.adrian@gmail.com">contact me</a>.</p>
   </div>
+  <footer>
+    &copy; 2023 Adrian Sonnemann | <a href="#">Impressum</a>
+  </footer>
 </body>
 </html>
