--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     padding: 0;
   }
   header {
-    background-image: url('plane-background.jpg'); /* Replace with your image URL */
+    background-image: url(https://github.com/AdrianSunshine/AirplaneSizing/blob/main/Website/Giant_planes_comparison_Side.svg); /* Replace with image URL */
     background-size: cover;
     color: #fff;
     text-align: center;
