--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <nav>
     <a href="#">Home</a>
     <a href="#">About</a>
-    <a href="#">Contact</a>
+    <a href="./Website/Contact.html">Contact</a>
   </nav>
   <div class="container">
     <h2>Disclaimer</h2>
