--- a/Website/Contact.html
+++ b/Website/Contact.html
@@ -60,7 +60,7 @@
     <p>Feel free to get in touch with us.</p>
   </header>
   <nav>
-    <a href="./index.html">Home</a>
+    <a href="././index.html">Home</a>
     <a href="#">About</a>
     <a href="./Website/Contact.html">Contact</a>
   </nav>
