--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     padding: 0;
   }
   header {
-    background-image: url(https://github.com/AdrianSunshine/AirplaneSizing/blob/main/Website/Giant_planes_comparison_Side.svg); /* Replace with image URL */
+    background-image: url('/Website/Giant_planes_comparison_Side.svg'); /* Replace with image URL */
     background-size: cover;
     color: #fff;
     text-align: center;
@@ -60,7 +60,7 @@
     <p>Author: Adrian Sonnemann</p>
   </header>
   <nav>
-    <a href="#">Home</a>
+    <a href="./index.html">Home</a>
     <a href="#">About</a>
     <a href="./Website/Contact.html">Contact</a>
   </nav>
