--- a/Website/Contact.html
+++ b/Website/Contact.html
@@ -82,7 +82,7 @@
     </div>
   </div>
   <footer>
-    &copy; 2023 Adrian Sonnemann | <a href="#">Impressum</a>
+    &copy; 2023 Adrian Sonnemann | <a href="./Website/impressum.html">Impressum</a>
   </footer>
 </body>
 </html>
