--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <p>If you have any questions, comments, or suggestions about this project, feel free to <a href="mailto:sonnemann.adrian@gmail.com">contact me</a>.</p>
   </div>
   <footer>
-    &copy; 2023 Adrian Sonnemann | <a href="#">Impressum</a>
+    &copy; 2023 Adrian Sonnemann | <a href="./Website/impressum.html">Impressum</a>
   </footer>
 </body>
 </html>
