--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   }
   header {
     background-image: url('/Website/Giant_planes_comparison_Side.svg'); /* Replace with image URL */
+    background-color: black;
     background-size: cover;
     color: #fff;
     text-align: center;
