Update and rename Contact.html to contact.html

--- a/Website/contact.html
+++ b/Website/contact.html
@@ -60,9 +60,9 @@
     <p>Feel free to get in touch with us.</p>
   </header>
   <nav>
-    <a href="././index.html">Home</a>
-    <a href="#">About</a>
-    <a href="./Website/Contact.html">Contact</a>
+    <a href="../index.html">Home</a>
+    <a href="../Website/about.html">About</a>
+    <a href="../Website/contact.html">Contact</a>
   </nav>
   <div class="container">
     <div class="contact-form">
@@ -82,7 +82,7 @@
     </div>
   </div>
   <footer>
-    &copy; 2023 Adrian Sonnemann | <a href="./Website/impressum.html">Impressum</a>
+    &copy; 2023 Adrian Sonnemann | <a href="../Website/impressum.html">Impressum</a>
   </footer>
 </body>
 </html>
