--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     padding: 0;
   }
   header {
-    background-image: url('/Website/Giant_planes_comparison_Side.svg'); /* Replace with image URL */
+    background-image: url('../Website/Giant_planes_comparison_Side.svg'); /* Replace with image URL */
     background-color: black;
     background-size: cover;
     color: #fff;
@@ -61,9 +61,9 @@
     <p>Author: Adrian Sonnemann</p>
   </header>
   <nav>
-    <a href="./index.html">Home</a>
-    <a href="#">About</a>
-    <a href="./Website/Contact.html">Contact</a>
+    <a href="../index.html">Home</a>
+    <a href="../Website/about.html">About</a>
+    <a href="../Website/contact.html">Contact</a>
   </nav>
   <div class="container">
     <h2>Disclaimer</h2>
@@ -80,7 +80,7 @@
     <p>If you have any questions, comments, or suggestions about this project, feel free to <a href="mailto:sonnemann.adrian@gmail.com">contact me</a>.</p>
   </div>
   <footer>
-    &copy; 2023 Adrian Sonnemann | <a href="./Website/impressum.html">Impressum</a>
+    &copy; 2023 Adrian Sonnemann | <a href="../Website/impressum.html">Impressum</a>
   </footer>
 </body>
 </html>
