--- a/Website/impressum.html
+++ b/Website/impressum.html
@@ -56,9 +56,9 @@
     <p>Legal Information</p>
   </header>
   <nav>
-    <a href="././index.html">Home</a>
-    <a href="#">About</a>
-    <a href="./Website/Contact.html">Contact</a>
+    <a href="../index.html">Home</a>
+    <a href="../Website/about.html">About</a>
+    <a href="../Website/contact.html">Contact</a>
   </nav>
   <div class="container">
     <div class="impressum-content">
@@ -233,7 +233,7 @@
     </div>
   </div>
   <footer>
-    &copy; 2023 Adrian Sonnemann | <a href="./Website/impressum.html">Impressum</a>
+    &copy; 2023 Adrian Sonnemann | <a href="../Website/impressum.html">Impressum</a>
   </footer>
 </body>
 </html>
