--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     color: #333;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
   }
   header {
     background-image: url('../Website/Giant_planes_comparison_Side.svg'); /* Replace with image URL */
@@ -21,6 +24,7 @@
     padding: 10px;
   }
   .container {
+    flex: 1;
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
