--- a/Website/contact.html
+++ b/Website/contact.html
@@ -61,8 +61,8 @@
   </header>
   <nav>
     <a href="../index.html">Home</a>
-    <a href="../Website/about.html">About</a>
-    <a href="../Website/contact.html">Contact</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
   </nav>
   <div class="container">
     <div class="contact-form">
@@ -82,7 +82,7 @@
     </div>
   </div>
   <footer>
-    &copy; 2023 Adrian Sonnemann | <a href="../Website/impressum.html">Impressum</a>
+    &copy; 2023 Adrian Sonnemann | <a href="impressum.html">Impressum</a>
   </footer>
 </body>
 </html>
