--- a/Website/about.html
+++ b/Website/about.html
@@ -54,8 +54,8 @@
   </header>
   <nav>
     <a href="../index.html">Home</a>
-    <a href="../Website/about.html">About</a>
-    <a href="../Website/contact.html">Contact</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
   </nav>
   <div class="container">
     <div class="about-content">
@@ -67,7 +67,7 @@
     </div>
   </div>
   <footer>
-    &copy; 2023 Adrian Sonnemann | <a href="../Website/impressum.html">Impressum</a>
+    &copy; 2023 Adrian Sonnemann | <a href="impressum.html">Impressum</a>
   </footer>
 </body>
 </html>
