--- a/index.html
+++ b/index.html
@@ -11,20 +11,15 @@
     color: #333;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
   }
   header {
-    background-image: url('../Website/Giant_planes_comparison_Side.svg'); /* Replace with image URL */
-    background-color: black;
+    background-image: url('Website/Giant_planes_comparison_Side.svg'); /* Replace with image URL */
     background-size: cover;
     color: #fff;
     text-align: center;
-    padding: 10px;
+    padding: 80px;
   }
   .container {
-    flex: 1;
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
@@ -36,13 +31,18 @@
     margin-top: 20px;
   }
   footer {
-    background-color: #666;
+    background-color: #555;
     color: #fff;
     text-align: center;
     padding: 10px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
+  }
+  footer a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
   }
   nav {
     background-color: #555;
@@ -77,11 +77,7 @@
     <h2>Introduction</h2>
     <p>Welcome to my Airplane Sizing Project! This is a personal project aimed at assisting someone in determining suitable dimensions for various types of airplanes. The project provides resources and tools to help make informed decisions about airplane sizing, but please note that the information here may not be accurate or current.
 	<h2>Purpose</h2>
-	<p>The primary purpose of this project is to provide myself with a platform to explore and understand the concepts of airplane sizing. It's a playground for experimenting with different formulas, calculations, and design considerations related to aircraft dimensions. While the project is designed for personal use, enthusiasts and curious minds are welcome to take a quick look and may share feedback.</p>
-    <h2>Content Goes Here</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam bibendum, arcu eu fringilla dapibus.</p>
-    <h2>Contact</h2>
-    <p>If you have any questions, comments, or suggestions about this project, feel free to <a href="mailto:sonnemann.adrian@gmail.com">contact me</a>.</p>
+	<p>The primary purpose of this project is to provide myself with a platform to explore and understand the concepts of airplane sizing. It's a playground for experimenting with different formulas, calculations, and design considerations related to aircraft dimensions. While the project is designed for personal use, enthusiasts and curious minds are welcome to take a quick look and may share feedback.</p>   
   </div>
   <footer>
     &copy; 2023 Adrian Sonnemann | <a href="Website/impressum.html">Impressum</a>
