--- a/Website/about.html
+++ b/Website/about.html
@@ -12,25 +12,37 @@
     margin: 0;
     padding: 0;
   }
+  header {
+    background-image: url('Giant_planes_comparison_Side.svg'); /* Replace with image URL */
+    background-size: cover;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+  }
   .container {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
   }
-  .about-content {
+  .contact-form {
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   }
   footer {
-    background-color: #666;
+    background-color: #555;
     color: #fff;
     text-align: center;
     padding: 10px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
+  }
+  footer a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
   }
   nav {
     background-color: #555;
@@ -54,8 +66,8 @@
   </header>
   <nav>
     <a href="../index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="../Website/about.html">About</a>
+    <a href="../Website/contact.html">Contact</a>
   </nav>
   <div class="container">
     <div class="about-content">
@@ -67,7 +79,7 @@
     </div>
   </div>
   <footer>
-    &copy; 2023 Adrian Sonnemann | <a href="impressum.html">Impressum</a>
+    &copy; 2023 Adrian Sonnemann | <a href="../Website/impressum.html">Impressum</a>
   </footer>
 </body>
 </html>
